Fixed overflow issue in the chat, refined icon

--- a/src/scss/ChatWindow.scss
+++ b/src/scss/ChatWindow.scss
@@ -28,18 +28,6 @@
     
         border-radius: 50%;
       }
-  
-      .active-indicator {
-        width: 10px;
-        height: 10px;
-  
-        border-radius: 50%;
-        background-color: #76D45E;
-  
-        position: absolute;
-        bottom: 5px;
-        right: 5px;
-      }
     }  
 
     .info {
@@ -77,7 +65,7 @@
 
     padding: 20px;
 
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .chat-bottom {
