--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,3 +1,5 @@
 .app-container {
   display: flex;
+
+  max-height: 100dvh;
 }
