--- a/src/scss/Navbar.scss
+++ b/src/scss/Navbar.scss
@@ -1,5 +1,4 @@
 .navbar-container {
-  height: 100dvh;
   width: 100px;
 
   display: flex;
@@ -7,7 +6,6 @@
   align-items: center;
 
   padding: 20px;
-
   background-color: #F0F4FA;
 
   .logo-container {
@@ -47,13 +45,20 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: #3A7BF7;
+
+        .nav-icon {
+          color: white; // Replace with your desired color
+        }
+      }
     }
 
     .nav-item.active {
-      background-color: #3A7BF7;
-    }
-
-    .nav-item:hover {
+      color: white;
       background-color: #3A7BF7;
     }
   }
