--- a/src/scss/Register.scss
+++ b/src/scss/Register.scss
@@ -23,12 +23,21 @@
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 
     .form-header {
-      text-align: center;
-
-      color: #709CE6;
-      font-weight: bold;
+      display: flex;
+      justify-content: center;
 
       margin-bottom: 20px;
+      
+      .heading {
+        color: #709CE6;
+        font-weight: bold;
+        text-align: center;
+      }
+
+      .logo {
+        width: 50px;
+        height: 50px;
+      }
     }
 
     .sign-up-btn-container {
